[AEM-6444] Add fix for pod promo overflow in firefox (#363)

--- a/src/contentPackages/heroWithTwoRails/_styles.scss
+++ b/src/contentPackages/heroWithTwoRails/_styles.scss
@@ -53,6 +53,10 @@ $mt3_large: 1280px;
   }
 
   //LIGHT theme rules
+  &--light {
+    /*needed overflow issue with pod promo in Firefox and IE*/
+    background: $mt3_color-white;
+  }
   &__heading {
     h1 {
       color: $mt3_color-gray-10;
